Integração com Swapi.co, modificação PlanetResource método findAll e configuracao Swagger para documentação e algumas adaptações

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.port=${port:8081}
 spring.data.mongodb.uri=mongodb://localhost:27017/starwars
+server.port=${port:8081}
+
+#show sql statement
+logging.level.org.hibernate.SQL=debug
