Implentação do Swagger-ui

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+spring.profiles.active=test
+
 spring.data.mongodb.uri=mongodb://localhost:27017/starwars
 server.port=${port:8081}
 
 #show sql statement
 logging.level.org.hibernate.SQL=debug
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
